--- a/app/src/main/res/layout/dialog_fragment_settings_bottom_sheet.xml
+++ b/app/src/main/res/layout/dialog_fragment_settings_bottom_sheet.xml
@@ -6,12 +6,23 @@
     android:padding="@dimen/medium_space"
     tools:context="vn.com.hieptt149.workoutmanager.home.fragment.SettingsBottomSheetDialogFragment">
 
-    <TextView
-        android:id="@+id/tv_seekbar_value"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="@dimen/normal_text_size"
-        android:gravity="center_horizontal"/>
+        android:layout_height="wrap_content">
+        <TextView
+            android:id="@+id/tv_seekbar_value"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/normal_text_size"
+            android:layout_centerInParent="true"/>
+        <TextView
+            android:id="@+id/tv_done"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/done"
+            android:textSize="@dimen/normal_text_size"
+            android:layout_alignParentRight="true"/>
+    </RelativeLayout>
 
     <SeekBar
         android:id="@+id/sb_duration"
