--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -5,6 +5,11 @@
     android:orientation="vertical"
     tools:context=".home.fragment.SettingsFragment">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/item_height"
@@ -28,6 +33,11 @@
             android:gravity="center_vertical|right" />
     </LinearLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
+
     <LinearLayout
         android:id="@+id/ln_exercises_duration"
         android:layout_width="match_parent"
@@ -50,9 +60,14 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:gravity="center_vertical|right"
-            android:textSize="@dimen/normal_text_size"/>
+            android:textSize="@dimen/normal_text_size" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:id="@+id/ln_rests_duration"
@@ -76,9 +91,14 @@
             android:layout_height="match_parent"
             android:layout_weight="2"
             android:gravity="center_vertical|right"
-            android:textSize="@dimen/normal_text_size"/>
+            android:textSize="@dimen/normal_text_size" />
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -103,5 +123,24 @@
             android:gravity="center_vertical|right"></Spinner>
 
     </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
+
+    <TextView
+        android:id="@+id/tv_login"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/item_height"
+        android:gravity="center_vertical"
+        android:padding="@dimen/medium_space"
+        android:text="@string/login"
+        android:textSize="@dimen/normal_text_size" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
 
 </LinearLayout>
