--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -25,5 +25,7 @@
         app:fabSize="auto"
         app:layout_anchor="@id/gv_preview_workout"
         app:layout_anchorGravity="bottom|right|end"
-        app:rippleColor="@android:color/white" />
+        app:rippleColor="@android:color/white"
+        android:layout_marginRight="@dimen/medium_space"
+        android:layout_marginBottom="@dimen/medium_space"/>
 </android.support.design.widget.CoordinatorLayout>
