--- a/app/src/main/res/layout/fragment_start_workout.xml
+++ b/app/src/main/res/layout/fragment_start_workout.xml
@@ -35,7 +35,8 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:src="@drawable/ic_chevron_left" />
+            android:src="@drawable/ic_chevron_left"
+            android:visibility="invisible"/>
 
         <RelativeLayout
             android:layout_width="0dp"
