--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,261 +1,252 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="@dimen/small_space"
-    android:weightSum="10"
     tools:context="vn.com.hieptt149.workoutmanager.workoutdetails.fragment.WorkoutDetailsFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="horizontal"
-        android:weightSum="10">
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2.5"
-            android:orientation="vertical"
-            android:padding="@dimen/small_space"
-            android:weightSum="10">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="7"
-                android:gravity="center"
-                android:text="@string/cardio"
-                android:textSize="@dimen/normal_text_size" />
-
-            <ProgressBar
-                android:id="@+id/pb_cardio"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
-                android:indeterminate="false"
-                android:max="100" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2.5"
-            android:orientation="vertical"
-            android:padding="@dimen/small_space"
-            android:weightSum="10">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="7"
-                android:gravity="center"
-                android:text="@string/strength"
-                android:textSize="@dimen/normal_text_size" />
-
-            <ProgressBar
-                android:id="@+id/pb_strength"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
-                android:indeterminate="false"
-                android:max="100" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2.5"
-            android:orientation="vertical"
-            android:padding="@dimen/small_space"
-            android:weightSum="10">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="7"
-                android:gravity="center"
-                android:text="@string/mobility"
-                android:textSize="@dimen/normal_text_size" />
-
-            <ProgressBar
-                android:id="@+id/pb_mobility"
-                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="3"
-                android:indeterminate="false"
-                android:max="100" />
-        </LinearLayout>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_marginTop="@dimen/medium_space"
-        android:layout_weight="4"
+        android:layout_height="match_parent"
         android:orientation="vertical"
-        android:weightSum="10">
-
-        <ImageView
-            android:id="@+id/iv_choose_icon"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_weight="5.5"
-            android:src="@drawable/no_image"
-            android:tag="no_image" />
-
-        <TextView
-            android:id="@+id/tv_click_to_choose"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:text="@string/click_iv_to_choose"
-            android:textStyle="italic" />
-
-        <EditText
-            android:id="@+id/edt_title"
-            android:layout_width="@dimen/workout_details_image_view_width"
-            android:layout_height="0dp"
-            android:layout_gravity="center"
-            android:layout_weight="2"
-            android:backgroundTint="@android:color/transparent"
-            android:gravity="center"
-            android:hint="Workout Name"
-            android:singleLine="true" />
+        android:padding="@dimen/small_space">
 
         <LinearLayout
-            android:id="@+id/ln_btn_save_delete"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1.5"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/iv_delete"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_delete"
-                android:adjustViewBounds="true"
-                android:visibility="gone"/>
-
-            <ImageView
-                android:id="@+id/iv_save"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_save"
-                android:adjustViewBounds="true"
-                android:visibility="gone"/>
-
-            <ImageView
-                android:id="@+id/iv_start"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:src="@drawable/ic_start"
-                android:adjustViewBounds="true"
-                android:visibility="gone"/>
-        </LinearLayout>
-
-    </LinearLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3.5">
-
-        <LinearLayout
-            android:id="@+id/ln_exercises_info"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:layout_height="@dimen/item_height"
+            android:gravity="center"
+            android:orientation="horizontal"
             android:weightSum="10">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="2">
-
-                <TextView
-                    android:id="@+id/tv_total_exercise"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:text="@string/total_exercise"
-                    android:textSize="@dimen/normal_text_size" />
-
-                <TextView
-                    android:id="@+id/tv_total_time"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_alignParentRight="true"
-                    android:gravity="center_vertical"
-                    android:text="@string/total_time"
-                    android:textSize="@dimen/normal_text_size" />
-
-                <View
-                    android:id="@+id/view"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@android:color/darker_gray" />
-            </RelativeLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_alignParentLeft="true"
-                android:layout_alignParentStart="true"
-                android:layout_alignTop="@+id/view"
-                android:layout_marginTop="@dimen/small_space"
-                android:layout_weight="8">
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:orientation="vertical"
+                android:padding="@dimen/small_space"
+                android:weightSum="10">
 
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/rv_preview_selected_exercise"
+                <TextView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"></android.support.v7.widget.RecyclerView>
+                    android:layout_height="0dp"
+                    android:layout_weight="7"
+                    android:gravity="center"
+                    android:text="@string/cardio"
+                    android:textSize="@dimen/normal_text_size" />
+
+                <ProgressBar
+                    android:id="@+id/pb_cardio"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:indeterminate="false"
+                    android:max="100" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:orientation="vertical"
+                android:padding="@dimen/small_space"
+                android:weightSum="10">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="7"
+                    android:gravity="center"
+                    android:text="@string/strength"
+                    android:textSize="@dimen/normal_text_size" />
+
+                <ProgressBar
+                    android:id="@+id/pb_strength"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:indeterminate="false"
+                    android:max="100" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"
+                android:orientation="vertical"
+                android:padding="@dimen/small_space"
+                android:weightSum="10">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="7"
+                    android:gravity="center"
+                    android:text="@string/mobility"
+                    android:textSize="@dimen/normal_text_size" />
+
+                <ProgressBar
+                    android:id="@+id/pb_mobility"
+                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="3"
+                    android:indeterminate="false"
+                    android:max="100" />
             </LinearLayout>
         </LinearLayout>
 
-        <ScrollView
-            android:id="@+id/sv_description_container"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"
-            android:paddingLeft="@dimen/large_space"
-            android:paddingRight="@dimen/large_space">
+            android:layout_height="@dimen/workout_info_height"
+            android:layout_marginTop="@dimen/medium_space"
+            android:orientation="vertical"
+            android:weightSum="10">
+
+            <ImageView
+                android:id="@+id/iv_choose_icon"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="5.5"
+                android:src="@drawable/no_image"
+                android:tag="no_image" />
+
+            <TextView
+                android:id="@+id/tv_click_to_choose"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:text="@string/click_iv_to_choose"
+                android:textStyle="italic" />
+
+            <EditText
+                android:id="@+id/edt_title"
+                android:layout_width="@dimen/workout_details_image_view_width"
+                android:layout_height="0dp"
+                android:layout_gravity="center"
+                android:layout_weight="2"
+                android:backgroundTint="@android:color/transparent"
+                android:gravity="center"
+                android:hint="Workout Name"
+                android:singleLine="true" />
+
+            <LinearLayout
+                android:id="@+id/ln_btn_save_delete"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1.5"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/iv_delete"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_delete"
+                    android:visibility="gone" />
+
+                <ImageView
+                    android:id="@+id/iv_save"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_save"
+                    android:visibility="gone" />
+
+                <ImageView
+                    android:id="@+id/iv_start"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/ic_start"
+                    android:visibility="gone" />
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/workout_list_height">
+
+            <LinearLayout
+                android:id="@+id/ln_exercises_info"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:weightSum="10">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2">
+
+                    <TextView
+                        android:id="@+id/tv_total_exercise"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:gravity="center_vertical"
+                        android:text="@string/total_exercise"
+                        android:textSize="@dimen/normal_text_size" />
+
+                    <TextView
+                        android:id="@+id/tv_total_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:gravity="center_vertical"
+                        android:text="@string/total_time"
+                        android:textSize="@dimen/normal_text_size" />
+
+                    <View
+                        android:id="@+id/view"
+                        android:layout_width="match_parent"
+                        android:layout_height="1dp"
+                        android:layout_alignParentBottom="true"
+                        android:background="@android:color/darker_gray" />
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignTop="@+id/view"
+                    android:layout_marginTop="@dimen/small_space"
+                    android:layout_weight="8">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/rv_preview_selected_exercise"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"></android.support.v7.widget.RecyclerView>
+                </LinearLayout>
+            </LinearLayout>
 
             <TextView
                 android:id="@+id/tv_exercise_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/normal_text_size"/>
-        </ScrollView>
-    </RelativeLayout>
+                android:paddingLeft="@dimen/large_space"
+                android:paddingRight="@dimen/large_space"
+                android:textSize="@dimen/normal_text_size"
+                android:visibility="gone" />
+        </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/rl_btn_add_exercise_container"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1.5">
 
         <Button
             android:id="@+id/btn_add_exercise"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
+            android:layout_gravity="center_horizontal"
             android:background="@drawable/bg_button"
             android:padding="@dimen/medium_space"
             android:text="@string/add_exercise"
+            android:layout_marginTop="@dimen/large_space"
             android:textColor="@android:color/white" />
-    </RelativeLayout>
-</LinearLayout>
+    </LinearLayout>
+
+</ScrollView>
