--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,6 @@
     <dimen name="user_setting_item_height">150dp</dimen>
     <dimen name="time_practiced_text_size">40sp</dimen>
     <dimen name="exercise_name_text_size">40sp</dimen>
+    <dimen name="workout_info_height">250dp</dimen>
+    <dimen name="workout_list_height">225dp</dimen>
 </resources>
