--- a/app/src/main/res/layout/fragment_start_workout.xml
+++ b/app/src/main/res/layout/fragment_start_workout.xml
@@ -63,6 +63,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="2"
-            android:src="@drawable/ic_chevron_right" />
+            android:src="@drawable/ic_chevron_right"
+            android:visibility="invisible" />
     </LinearLayout>
 </LinearLayout>
