--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -1,5 +1,4 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -100,7 +99,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/workout_info_height"
-            android:layout_marginTop="@dimen/medium_space"
+            android:layout_marginTop="@dimen/large_space"
             android:orientation="vertical"
             android:weightSum="10">
 
@@ -170,7 +169,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/workout_list_height">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/large_space">
 
             <LinearLayout
                 android:id="@+id/ln_exercises_info"
@@ -229,13 +229,12 @@
             <TextView
                 android:id="@+id/tv_exercise_description"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:paddingLeft="@dimen/large_space"
                 android:paddingRight="@dimen/large_space"
                 android:textSize="@dimen/normal_text_size"
                 android:visibility="gone" />
         </RelativeLayout>
-
 
         <Button
             android:id="@+id/btn_add_exercise"
