--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/medium_space"
     android:weightSum="10"
     tools:context=".home.fragment.HistoryFragment">
 
@@ -11,18 +10,19 @@
         android:id="@+id/chart_history"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="5"></com.github.mikephil.charting.charts.LineChart>
+        android:layout_weight="5"
+        android:padding="@dimen/medium_space"></com.github.mikephil.charting.charts.LineChart>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@android:color/darker_gray" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="5"
         android:orientation="vertical">
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@android:color/darker_gray" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_history"
