--- a/app/src/main/res/layout/fragment_workout.xml
+++ b/app/src/main/res/layout/fragment_workout.xml
@@ -4,28 +4,93 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="@dimen/medium_space"
     tools:context=".home.fragment.WorkoutFragment">
 
-    <GridView
-        android:id="@+id/gv_preview_workout"
+    <ScrollView
+        android:id="@+id/sv_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:columnWidth="@dimen/workout_details_item_width"
-        android:horizontalSpacing="@dimen/small_space"
-        android:numColumns="auto_fit"
-        android:verticalSpacing="@dimen/small_space"></GridView>
+        android:layout_height="match_parent">
+
+        <LinearLayout
+            android:id="@+id/ln_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="@dimen/medium_space">
+
+            <LinearLayout
+                android:id="@+id/ln_preview_workout_quick_start"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/quick_starters"
+                    android:textSize="@dimen/big_text_size" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/medium_space"
+                    android:background="@android:color/darker_gray" />
+
+                <vn.com.hieptt149.workoutmanager.utils.ExpandableChildGridView
+                    android:id="@+id/gv_preview_workout_quick_start"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/medium_space"
+                    android:columnWidth="@dimen/workout_details_item_width"
+                    android:horizontalSpacing="@dimen/small_space"
+                    android:numColumns="auto_fit"
+                    android:verticalSpacing="@dimen/small_space"></vn.com.hieptt149.workoutmanager.utils.ExpandableChildGridView>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/ln_preview_workout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/large_space"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/custom_made"
+                    android:textSize="@dimen/big_text_size" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginTop="@dimen/medium_space"
+                    android:background="@android:color/darker_gray" />
+
+                <vn.com.hieptt149.workoutmanager.utils.ExpandableChildGridView
+                    android:id="@+id/gv_preview_workout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/medium_space"
+                    android:columnWidth="@dimen/workout_details_item_width"
+                    android:horizontalSpacing="@dimen/small_space"
+                    android:numColumns="auto_fit"
+                    android:verticalSpacing="@dimen/small_space"></vn.com.hieptt149.workoutmanager.utils.ExpandableChildGridView>
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab_addworkout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/large_space"
+        android:layout_marginRight="@dimen/large_space"
         android:clickable="true"
         android:src="@drawable/ic_add"
         app:fabSize="auto"
-        app:layout_anchor="@id/gv_preview_workout"
+        app:layout_anchor="@id/sv_container"
         app:layout_anchorGravity="bottom|right|end"
-        app:rippleColor="@android:color/white"
-        android:layout_marginRight="@dimen/medium_space"
-        android:layout_marginBottom="@dimen/medium_space"/>
+        app:rippleColor="@android:color/white" />
 </android.support.design.widget.CoordinatorLayout>
